會員管理 新增、編輯

--- a/EnjoyEat/EnjoyEat/Areas/OrderForHere/Views/StartOrder/FixedIndex.cshtml
+++ b/EnjoyEat/EnjoyEat/Areas/OrderForHere/Views/StartOrder/FixedIndex.cshtml
@@ -187,7 +187,7 @@
                 selectedSubCategoryId: '', // 選擇的子分類
                 categories: [], // 主類別清單
                 tableId: '',
-                capacity: ''
+                capacity: '',
             },
             methods: {
                 //添加到購物車
