會員登入及忘記密碼

--- a/EnjoyEat/EnjoyEat/Views/MemberLogin/ForgetPassword.cshtml
+++ b/EnjoyEat/EnjoyEat/Views/MemberLogin/ForgetPassword.cshtml
@@ -1,28 +1,109 @@
-﻿<form action="forms/book-a-table.php" method="post" role="form" class="php-email-form" data-aos="fade-up" data-aos-delay="100">
+﻿@section Styles{
+    <link href="~/css/memberloginstyle.css" rel="stylesheet" />
+    <link href="~/lib/font-awesome/css/all.min.css" rel="stylesheet" />
+    <link rel="stylesheet"
+          href="https://cdn.jsdelivr.net/npm/vue2-datepicker@3.11.0/index.css" />
+}
+
+<!-- d-flex align-items-center -->
+<div id="forget" class="php-email-form" data-aos="fade-up" data-aos-delay="100">
     <main id="main">
         <section class="breadcrumbs">
-            <div class="container">
-                <h1 style="color:burlywood">
-                    <div>
-                        <div class="flex-shrink-0" style="text-align:center">
-                            <p>忘記密碼</p>
-                        </div>
-                        <img src="#" alt="" width="300">
-                    </div>
+            <div class="container" id="member">
+                <h1 id="Logo">
+                    忘記密碼
+                    <i class="fa-sharp fa-solid fa-unlock-keyhole"></i>
+                </h1>
             </div>
-            <div class="flex-shrink-0" style="text-align:center">
-                <p>請幫我輸入您註冊時的帳號以及E-mail,我們將會寄出一封密碼重製信給您</p>
-                <img src="#" alt="" width="150">
+            <div class="d-grid gap-2 col-6 mx-auto" id="memberRegistration">
+                <h4>
+                    <i class="fa-solid fa-lock"></i>
+                    <span>請輸入註冊帳號</span>
+                </h4>
+
+                <input type="text" class="left form-label col-md-11" v-model="account" placeholder="請輸入帳號">
+
+            <div id="PasswordHelpBlock" class="form-text">
+                最小不能低於8碼,最大上限為12碼,不限英文與數字
             </div>
-            </h1>
+
+            <div id="AccountHelpBlock" class="form-text nono" v-if="accountcheck">
+                帳號為無效之帳號
             </div>
-            <div class="d-grid gap-2 col-6 mx-auto">
-                <input type="text" aria-label="Account" class="form-control" placeholder="請輸入註冊帳號">
-                <input type="password" aria-label="Password" class="form-control" placeholder="請輸入註冊e-mail">
             </div>
-            <br> <br>
-            <div class="d-grid gap-2 col-6 mx-auto">
-                <button class="btn btn-primary" type="">送出</button>
+
+            <div class="d-grid gap-2 col-6 mx-auto" id="memberRegistration">
+                <h4>
+                    <i class="fa-solid fa-envelope"></i>
+                    <span>請輸入註冊信箱</span>
+                </h4>
+
+                <input type="email" class="left form-label col-md-11" v-model="email" placeholder="請輸入電子郵件">
+
+                <div id="AccountHelpBlock" class="form-text nono" v-if="emailcheck">
+                    信箱為無效之信箱，請確認輸入信箱為原註冊之信箱
+                </div>
+
+                <div class="d-grid gap-2 col-md-9 mx-auto">
+                    <button class="btn btn-primary" type="button" @@click="submitInfo">送出</button>
+                </div>
             </div>
-       </section>
-</form>
+        </section>
+    </main><!-- End #main -->
+</div>
+
+@section Scripts{
+    <script src="https://cdn.jsdelivr.net/npm/vue2-datepicker@3.11.0/index.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.5/dist/sweetalert2.all.min.js"></script>
+    <script>
+        let app = new Vue({
+            el: '#forget',
+            data: {
+                account:"",
+                email:"",
+                accountcheck:false,
+                emailcheck:false,
+            },
+            methods: {
+                submitInfo:function(){
+                    let _this=this;
+                    _this.accountcheck=false;
+                    _this.emailcheck=false;
+                    if(_this.account.length<8){
+                        return _this.accountcheck = true;
+                    }
+                    request={
+                        Email:_this.email,
+                        Account:_this.account,
+                    }
+                    axios.post("/api/member/ForgetPassword", request).then(response =>{
+                        if(response.data =="帳號錯誤"){
+                           return _this.accountcheck = true;
+                        }
+                        else if(response.data =="信箱錯誤"){
+                            return _this.emailcheck = true;
+                        }
+                        else{
+                            Swal.fire({
+                                allowOutsideClick: false,
+                                icon: 'success',
+                                color: '#333',
+                                iconColor: '#D8CDB9',
+                                background: '#FFF',
+                                title: '已發送至您的信箱',
+                                html: '<div class="custom-swal-container"><div class="custom-swal-message">將跳轉至登入頁面!</div></div>',
+                                showConfirmButton: false,
+                                timer: 2000,
+                                position: 'center'
+                            }).then(result => {
+                                if (result.dismiss === Swal.DismissReason.timer) {
+                                    window.location.href = `/MemberLogin/Index`;
+                                }
+                            });
+                        }
+                    })
+                },
+            }
+        });
+    </script>
+}
