--- a/EnjoyEat/EnjoyEat/Views/MemberLogin/Index.cshtml
+++ b/EnjoyEat/EnjoyEat/Views/MemberLogin/Index.cshtml
@@ -2,56 +2,107 @@
     <link href="~/css/memberlogin.css" rel="stylesheet" />
     <link href="~/lib/font-awesome/css/all.min.css" rel="stylesheet" />
 }
-<form action="" method="post" role="form" class="php-email-form" data-aos="fade-up" data-aos-delay="100">
+
+<div class="php-email-form" data-aos="fade-up" data-aos-delay="100">
     <main id="main">
-        <div>
+        <div id="login">
             <section class="breadcrumbs">
-                <div class="container ">
+                <div class="container">
                     <h1 id="Logo">
                         會員登入
                         <i class="fa-solid fa-right-to-bracket"></i>
                     </h1>
                 </div>
+                <div id="AccountHelpBlock" class="form-label nono" v-if="show">
+                    帳號或密碼輸入錯誤，請重新確認
+                </div>
+                <div id="AccountHelpBlock" class="form-label nono" v-if="short">
+                    帳號或密碼長度為8至12個字，請重新確認
+                </div>
                 <br />
-                <div class=" d-grid gap-2 col-6 mx-auto">
+                <div class="d-grid gap-2 col-6 mx-auto">
                     <h4>
                         <i class="fa-solid fa-lock"></i>
                         <span>帳號</span>
                     </h4>
-                    <input type="text" aria-label="Account" placeholder="請輸入會員帳號"
+                    <input type="text" aria-label="Account" v-model="account" placeholder="請輸入會員帳號"
                            maxlength="12" minlength="8" required>
                     <h4>
                         <i class="fa-solid fa-key"></i>
                         <span>密碼</span>
                     </h4>
-                    <input type="password" aria-label="Password" class="" placeholder="請輸入會員密碼"
+                    <input type="password" aria-label="Password" v-model="password" placeholder="請輸入會員密碼"
                            maxlength="12" minlength="8" required>
 
                     <label for="c1">
-                        <input type="checkbox" id="checkRember" name="cc"  />
+                        <input type="checkbox" id="checkRember" name="cc" />
                         <span class="rememberMe">記住我</span>
                     </label>
 
-                    <button class="login btn btn-primary" type="button">登入</button>
-                    <a asp-controller="MemberRegister" asp-action="Index" class=" register btn btn-primary">註冊會員</a>
-                    <button class="btn btn-danger" type="button">忘記密碼</button>
+                    <button class="login btn btn-primary" type="button" @@click="login">登入</button>
+                    <button class="login btn btn-primary" type="button" @@click="register">註冊</button>
+                    <button class="login btn btn-danger" type="button" @@click="forget">忘記密碼</button>
                 </div>
-                <br>
-                <div class="d-grid gap-5 col-6 mx-auto">
-                    <button class="btn btn-outline-primary" type="button">
-                        <img src="facebook.png" alt="facebook-icon">
-                        Facebook登入
-                    </button>
-                </div>
-                <div class="d-grid gap-5 col-6 mx-auto">
-                    <button type="button" class="btn btn-outline-primary">
-                        <img src="google.png" alt="google-icon">
-                        Google 登入
-                    </button>
-                </div>
+
             </section>
         </div>
     </main><!-- End #main -->
-</form>
+</div>
 
-
+@section Scripts{
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.5/dist/sweetalert2.all.min.js"></script>
+    <script>
+        let app = new Vue({
+            el: "#login",
+            data: {
+                account: "",
+                password: "",
+                show: false,
+                short:false,
+            },
+            methods: {
+                login: function () {
+                    let _this = this;
+                    _this.short = false;
+                    _this.show = false;
+                    if(_this.account.length<8 || _this.password.length<8){
+                        return _this.short =true
+                    }
+                    request = {
+                        Account: _this.account,
+                        Password: _this.password
+                    };
+                    axios.post("/api/member/Login", request)
+                        .then(response => {
+                            if (response.data == "帳號密碼錯誤") {
+                                _this.show = true;
+                            } else {
+                                Swal.fire({
+                                    allowOutsideClick: false,
+                                    icon: 'success',
+                                    color: '#333',
+                                    iconColor: '#D8CDB9',
+                                    background: '#FFF',
+                                    title: '登入成功',
+                                    html: '<div class="custom-swal-container"><div class="custom-swal-message">將自動跳轉至首頁!</div></div>',
+                                    showConfirmButton: false,
+                                    timer: 2000,
+                                    position: 'center'
+                                }).then(result => {
+                                    if (result.dismiss === Swal.DismissReason.timer) {
+                                        window.location.href = `/Home/Index`;
+                                    }
+                                });
+                            }
+                        });
+                },
+                forget: function () {
+                    window.location.href = `/MemberLogin/ForgetPassword`;
+                },
+                register: function () {
+                    window.location.href = `/MemberRegister/Index`;
+                },
+            }
+        });
+    </script>
+}
