--- a/EnjoyEat/EnjoyEat/Areas/backend/Views/EmployeeManagement/Index.cshtml
+++ b/EnjoyEat/EnjoyEat/Areas/backend/Views/EmployeeManagement/Index.cshtml
@@ -2,9 +2,19 @@
 	{
 	<link href="~/lib/font-awesome/css/all.css" rel="stylesheet" />
 	<style>
+
 		.titleName td {
+			font-size: 20px;
+		}
+
+		.table tbody {
 			font-size: 18px;
 		}
+
+		.tdContent td:hover {
+			color: wheat;
+		}
+
 	</style>
 }
 
@@ -26,12 +36,12 @@
 	</div>
 	@*表格標題*@
 	<div class="form-group">
-		<table class="table table-striped table-hover">
+		<table class="table table-striped">
 			<thead>
 				<tr class="titleName">
 					<td>員工編號</td>
+					<td>員工帳號</td>
 					<td>員工姓名</td>
-					<td>性別</td>
 					<td>生日</td>
 					<td>聯絡方式</td>
 					<td>Email</td>
@@ -42,10 +52,10 @@
 			</thead>
 			@*表格內容*@
 			<tbody>
-				<tr v-for="item in EmployeeManagementDTO">
+				<tr v-for="item in EmployeeManagementDTO" class="tdContent">
 					<td>{{item.employeeId}}</td>
+					<td>{{item.account}}</td>
 					<td>{{item.name}}</td>
-					<td>{{item.gender}}</td>
 					<td>{{getFormattedDate(item.birthday)}}</td>
 					<td>{{item.phone}}</td>
 					<td>{{item.email}}</td>
@@ -73,6 +83,14 @@
 						<div class="form-group">
 							<label class="form-label">員工姓名:</label>
 							<input class="form-control" v-model="name" />
+						</div>
+						<div class="form-group">
+							<label class="form-label">員工帳號:</label>
+							<input class="form-control" v-model="account" />
+						</div>
+						<div class="form-group">
+							<label class="form-label">員工密碼:</label>
+							<input class="form-control" v-model="password" />
 						</div>
 						<div class="form-group">
 							<label class="form-label">性別:</label>
@@ -115,6 +133,14 @@
 							<input class="form-control" v-model="name" />
 						</div>
 						<div class="form-group">
+							<label class="form-label">員工帳號:</label>
+							<input class="form-control" v-model="account" />
+						</div>
+						<div class="form-group">
+							<label class="form-label">員工密碼:</label>
+							<input class="form-control" v-model="password" />
+						</div>
+						<div class="form-group">
 							<label class="form-label">性別:</label>
 							<input class="form-control" v-model="gender" />
 						</div>
@@ -150,7 +176,8 @@
 				<div class="modal-body" style="font-size: 18px; display: inline-block;">
 					你確定要刪除? <br />
 					員工編號: {{employeeId}}<br />
-					員工姓名: {{name}}
+					員工姓名: {{name}}<br />
+					員工帳號: {{account}}
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -173,9 +200,10 @@
 			el: '#app',
 			data: {
 				EmployeeManagementDTO: [],
-				filter: '',
 				employeeId: '',
 				name: '',
+				account: '',
+				password:'',
 				gender: '',
 				birthday: '',
 				email: '',
@@ -201,14 +229,19 @@
 					var request = {
 						employeeId: self.employeeId,
 						name: self.name,
+						account: self.account,
+						password: self.password,
 						gender: self.gender,
 						birthday: self.birthday,
 						email: self.email,
 						phone: self.phone
 					};
+					console.log(request);
 					axios.post("/api/EmployeeManagementApi/Edit", request)
 						.then(response => {
 							self.name = ""
+							self.account = ""
+							self.password = ""
 							self.gender = ""
 							self.birthday = ""
 							self.email = ""
@@ -236,6 +269,8 @@
 						var editedEmp = self.EmployeeManagementDTO[empIndex];
 						self.employeeId = editedEmp.employeeId;
 						self.name = editedEmp.name;
+						self.password = editedEmp.password;
+						self.account = editedEmp.account;
 						self.gender = editedEmp.gender;
 						self.birthday = editedEmp.birthday;
 						self.email = editedEmp.email;
@@ -257,6 +292,8 @@
 						var editedEmp = self.EmployeeManagementDTO[empIndex];
 						self.employeeId = editedEmp.employeeId;
 						self.name = editedEmp.name;
+						self.account = editedEmp.account;
+						self.password = editedEmp.password;
 						self.gender = editedEmp.gender;
 						self.birthday = editedEmp.birthday;
 						self.email = editedEmp.email;
@@ -267,128 +304,145 @@
 					let self = this;
 					var request = {
 						employeeId: self.employeeId,
-					};					
+						name: self.name,
+						account: self.account,
+						password: self.password,
+						gender: self.gender,
+						birthday: self.birthday,
+						email: self.email,
+						phone: self.phone
+					};
 					console.log(request);
-				axios.post("/api/EmployeeManagementApi/DeleteEmp", request)
-					.then(response => {
-						if (response.data) {
-							self.getEmp();
-							$("#deleteModal").modal("hide");
-							self.showSweetAlert3();
-							return;
+					axios.post("/api/EmployeeManagementApi/DeleteEmp", request)
+						.then(response => {
+							if (response.data) {
+								self.getEmp();
+								$("#deleteModal").modal("hide");
+								self.showSweetAlert3();
+								return;
+							}
+						})
+				},
+				showInsert: function () {
+					let self = this;
+					self.name = ""
+					self.account = ""
+					self.password = ""
+					self.gender = ""
+					self.birthday = ""
+					self.email = ""
+					self.phone = ""
+					$("#insertModal").modal("show");
+				},
+				createEmp: function () {
+					let self = this;
+					var request = {
+						name: "",
+						account: "",
+						password:"",
+						gender: "",
+						birthday: "",
+						email: "",
+						phone: ""
+					};
+					console.log(request);
+					axios.post("/api/EmployeeManagementApi/CreateEmp", request)
+						.then(response => {
+							$('#insertModal').modal('hide');
+							if (response.data) {
+								self.getEmp();
+								self.showSweetAlert2();
+								return;
+							}
+						});
+				},
+				showSweetAlert() {
+					let self = this;
+					Swal.fire({
+						icon: 'success',
+						color: '#FFF',
+						iconColor: '#D8CDB9',
+						background: '#2F4F4F',
+						text: '修改成功 !',
+						position: 'center',
+						confirmButtonText: '確定',
+						customClass: {
+							popup: 'custom-swal-popup'
+						},
+						showConfirmButton: true,
+						allowEscapeKey: false,
+						allowEnterKey: false,
+						allowOutsideClick: false,
+						closeOnClickOutside: false,
+						showClass: {
+							popup: 'animate__animated animate__fadeInDown'
+						},
+						hideClass: {
+							popup: 'animate__animated animate__fadeOutUp'
 						}
 					})
-			},
-			showInsert: function () {
-				$("#insertModal").modal("show");
-			},
-			createEmp: function () {
-				let self = this;
-				var request = {
-					name: self.name,
-					gender: self.gender,
-					birthday: self.birthday,
-					email: self.email,
-					phone: self.phone
-				};
-				console.log(request);
-				axios.post("/api/EmployeeManagementApi/CreateEmp", request)
-					.then(response => {
-						$('#insertModal').modal('hide');
-						if (response.data) {
-							self.getEmp();
-							self.showSweetAlert2();
-							return;
+				},
+				showSweetAlert2() {
+					let self = this;
+					Swal.fire({
+						icon: 'success',
+						color: '#FFF',
+						iconColor: '#D8CDB9',
+						background: '#2F4F4F',
+						text: '新增成功 !',
+						position: 'center',
+						confirmButtonText: '確定',
+						customClass: {
+							popup: 'custom-swal-popup'
+						},
+						showConfirmButton: true,
+						allowEscapeKey: false,
+						allowEnterKey: false,
+						allowOutsideClick: false,
+						closeOnClickOutside: false,
+						showClass: {
+							popup: 'animate__animated animate__fadeInDown'
+						},
+						hideClass: {
+							popup: 'animate__animated animate__fadeOutUp'
 						}
-					});
-			},
-			showSweetAlert() {
-				let self = this;
-				Swal.fire({
-					icon: 'success',
-					color: '#FFF',
-					iconColor: '#D8CDB9',
-					background: '#2F4F4F',
-					text: '修改成功 !',
-					position: 'center',
-					confirmButtonText: '確定',
-					customClass: {
-						popup: 'custom-swal-popup'
-					},
-					showConfirmButton: true,
-					allowEscapeKey: false,
-					allowEnterKey: false,
-					allowOutsideClick: false,
-					closeOnClickOutside: false,
-					showClass: {
-						popup: 'animate__animated animate__fadeInDown'
-					},
-					hideClass: {
-						popup: 'animate__animated animate__fadeOutUp'
+					})
+				},
+				showSweetAlert3() {
+					let self = this;
+					Swal.fire({
+						icon: 'success',
+						color: '#FFF',
+						iconColor: '#D8CDB9',
+						background: '#2F4F4F',
+						text: '刪除成功 !',
+						position: 'center',
+						confirmButtonText: '確定',
+						customClass: {
+							popup: 'custom-swal-popup'
+						},
+						showConfirmButton: true,
+						allowEscapeKey: false,
+						allowEnterKey: false,
+						allowOutsideClick: false,
+						closeOnClickOutside: false,
+						showClass: {
+							popup: 'animate__animated animate__fadeInDown'
+						},
+						hideClass: {
+							popup: 'animate__animated animate__fadeOutUp'
+						}
+					})
+				},
+				getFormattedDate(date) {
+					if (date) {
+						return moment(date).format('YYYY/MM/DD');
 					}
-				})
-			},
-			showSweetAlert2() {
-				let self = this;
-				Swal.fire({
-					icon: 'success',
-					color: '#FFF',
-					iconColor: '#D8CDB9',
-					background: '#2F4F4F',
-					text: '新增成功 !',
-					position: 'center',
-					confirmButtonText: '確定',
-					customClass: {
-						popup: 'custom-swal-popup'
-					},
-					showConfirmButton: true,
-					allowEscapeKey: false,
-					allowEnterKey: false,
-					allowOutsideClick: false,
-					closeOnClickOutside: false,
-					showClass: {
-						popup: 'animate__animated animate__fadeInDown'
-					},
-					hideClass: {
-						popup: 'animate__animated animate__fadeOutUp'
-					}
-				})
-			},
-			showSweetAlert3() {
-				let self = this;
-				Swal.fire({
-					icon: 'success',
-					color: '#FFF',
-					iconColor: '#D8CDB9',
-					background: '#2F4F4F',
-					text: '刪除成功 !',
-					position: 'center',
-					confirmButtonText: '確定',
-					customClass: {
-						popup: 'custom-swal-popup'
-					},
-					showConfirmButton: true,
-					allowEscapeKey: false,
-					allowEnterKey: false,
-					allowOutsideClick: false,
-					closeOnClickOutside: false,
-					showClass: {
-						popup: 'animate__animated animate__fadeInDown'
-					},
-					hideClass: {
-						popup: 'animate__animated animate__fadeOutUp'
-					}
-				})
-			},
-			getFormattedDate(date) {
-				if (date) {
-					return moment(date).format('YYYY/MM/DD');
-				}
-				return '';
-			},
+					return '';
+				},
 
-		}
-				});
+			}
+		});
 
 	</script>
 }
