--- a/EnjoyEat/EnjoyEat/Areas/backend/Views/ReservationManagement/Index.cshtml
+++ b/EnjoyEat/EnjoyEat/Areas/backend/Views/ReservationManagement/Index.cshtml
@@ -1,48 +1,46 @@
 ﻿     <!-- Table Start -->
 <div class="container-fluid pt-4 px-4">
     <div class="row g-4">
-        <div class="bg-secondary rounded h-100 p-4">
-            <h6 class="mb-4">Responsive Table</h6>
+        <div class="bg-secondary rounded h-100 p-4" id="app">
+            <h6 class="mb-4">訂位系統</h6>
+            <div class="col-12">
+                <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#createModal">新增</button>
+                <input type="text" v-model="searchText" />
+            </div>
             <div class="table-responsive">
                 <table class="table">
                     <thead>
                         <tr>
                             <th scope="col" id="serial">編號</th>
-                            <th scope="col" id="First Name">姓</th>
-                            <th scope="col" id="Last Name">名</th>
+                            <th scope="col" id="First Name">訂位姓名</th>
                             <th scope="col" id="Phone">電話</th>
-                            <th scope="col">Country</th>
-                            <th scope="col">ZIP</th>
-                            <th scope="col">Status</th>
+                            <th scope="col" id="AdultNumber">大人人數</th>
+                            <th scope="col" id="KidNumber">小孩人數</th>
+                            <th scope="col" id="DateTime">用餐日期</th>
+                            <th scope="col" id="MealTime">用餐時間</th>
+                            <th scope="col" id="Operation">操作</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
-                            <th scope="row">1</th>
-                            <td>John</td>
-                            <td>Doe</td>
-                            <td>jhon@email.com</td>
-                            <td>USA</td>
-                            <td>123</td>
-                            <td>Member</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">2</th>
-                            <td>Mark</td>
-                            <td>Otto</td>
-                            <td>mark@email.com</td>
-                            <td>UK</td>
-                            <td>456</td>
-                            <td>Member</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">3</th>
-                            <td>Jacob</td>
-                            <td>Thornton</td>
-                            <td>jacob@email.com</td>
-                            <td>AU</td>
-                            <td>789</td>
-                            <td>Member</td>
+                            <th scope="row">{{ReserveId}}</th>
+                            <td>{{ReservationName}}</td>
+                            <td>{{Phone}}</td>
+                            <td>{{NumberofAdultGuest}}</td>
+                            <td>{{NumberofKidGuest}</td>
+                            <td>{{ReservationDate}}</td>
+                            <td>{{ReservationTime}}</td>
+                            <td>{{Note}}</td>
+                            <td>
+                                <button id="editbtn">
+                                    <i class="fa-solid fa-pen-to-square"></i>
+                                </button>
+                            </td>
+                            <td>
+                                <button id="deletebtn">
+                                    <i class="fa-solid fa-trash"></i>
+                                </button>
+                            </td>
                         </tr>
                     </tbody>
                 </table>
@@ -51,3 +49,22 @@
     </div>
 </div>
 <!-- Table End -->
+@section Scripts
+    {
+    <script>
+        let app = new Vue({
+            el: '#app',
+            data: {
+                ReserveId: '',
+                ReservationName: '',
+                Phone: '',
+                NumberofAdultGuest: '',
+                NumberofKidGuest: '',
+                ReservationDate: '',
+                ReservationTime: '',
+                Note: '',
+            },
+
+        })
+    </script>
+}
