--- a/EnjoyEat/EnjoyEat/Views/Shared/_Layout.cshtml
+++ b/EnjoyEat/EnjoyEat/Views/Shared/_Layout.cshtml
@@ -54,8 +54,15 @@
                     <li><a class="nav-link scrollto" asp-area="backend" asp-controller="EmployeeManagement" asp-action="Index">後臺管理</a></li>
                     <li><a class="nav-link scrollto" asp-area="" asp-controller="OrderTogo" asp-action="Index">外帶點餐</a></li>
                     <li><a class="nav-link scrollto" asp-controller="ContactUs" asp-action="ContactUs">聯絡我們</a></li>
-                    <li><a class="nav-link scrollto" asp-controller="MemberLogin" asp-action="Index">會員登入</a></li>
-                    <li><a class="nav-link scrollto" asp-controller="MemberManagement" asp-action="Index">會員管理</a></li>
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        <li><a class="nav-link scrollto" asp-controller="MemberManagement" asp-action="Index">@User.Claims.FirstOrDefault(x=> x.Type == ClaimTypes.Name)?.Value 您好</a></li>
+                        <li><a class="nav-link scrollto" asp-controller="MemberLogin" asp-action="Logout">會員登出</a></li>                       
+                    }
+                    else
+                    {
+                        <li><a class="nav-link scrollto" asp-controller="MemberLogin" asp-action="Index">會員登入</a></li>
+                    }
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
             </nav><!-- .navbar -->
