--- a/EnjoyEat/EnjoyEat/Views/_ViewImports.cshtml
+++ b/EnjoyEat/EnjoyEat/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using EnjoyEat
 @using EnjoyEat.Models
 @using EnjoyEat.Models.ViewModel
+@using System.Security.Claims
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
