--- a/EnjoyEat/EnjoyEat/Views/Shared/_Layout.cshtml
+++ b/EnjoyEat/EnjoyEat/Views/Shared/_Layout.cshtml
@@ -106,7 +106,7 @@
                         <ul>
                             <li><i class="bx bx-chevron-right"></i> <a asp-controller="Reservations" asp-action="Index">訂位</a></li>
                             <li><i class="bx bx-chevron-right"></i> <a asp-controller="OrderTogo" asp-action="Index">外帶點餐</a></li>
-                            <li><a class="nav-link scrollto" asp-area="backend" asp-controller="EmployeeManagement" asp-action="Index">後臺管理</a></li>
+                            <li><a class="nav-link scrollto" asp-area="backend" asp-controller="EmployeeLogin" asp-action="Index">後臺管理</a></li>
                         </ul>
 
                     </div>
